# test

./: .gitignore  build.sh  package.json
docs/: ADD.md  APS.md  PRD.md  SRS.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: app.js  index.html  styles.css
