[package]
name = "test"
version = "0.1.0"
description = "Cross-platform web navigator built with Tauri"
authors = []
license = "MIT"
edition = "2021"

[lib]
name = "test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
